# mantaro_description

./: CMakeLists.txt  package.xml  projects
launch/: display.launch  display.launch~
meshes/: base.stl  caster_behind.dae  caster_behind.stl  fulluntitled.stl  left_wheel.stl  pole.stl  right_wheel.stl  top_plate.stl
meshes/ConvertSTL/Source Code/: ConvertSTL.Designer.vb  ConvertSTL.sln  ConvertSTL.vb  ConvertSTL.vbproj
meshes/images/: base.stl  caster.stl  left_wheel.stl  pole.stl  right_wheel.stl  top_plate.stl
src/: state_publisher.cpp
urdf/: errors-solutions  errors-solutions~  mantaro.urdf  mantaro.urdf~  mantaro2.urdf  todo  todo~
